solutions/ex6/service-prod.yaml
kind: Service
apiVersion: v1
metadata:
  name: exo5-prod
spec:
  selector:
    exercice: exercice5
    track: stable
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
