solutions/ex6/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clickcount-staging
spec:
  rules:
  - host: staging.changeme.xke.techx.fr
    http:
      paths:
      - backend:
          serviceName: clickcount
          servicePort: 8080
